# ray-tracer

./: Cargo.toml
src/: ch1.rs  ch10.rs  ch11.rs  ch12.rs  ch13.rs  ch14.rs  ch15.rs  ch2.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch9.rs  main.rs
src/domain/: camera.rs  canvas.rs  color.rs  intersection.rs  light.rs  material.rs  matrix.rs  mod.rs  object.rs  operations.rs  pattern.rs  ray.rs  tests.rs  world.rs
src/macros/: mod.rs
src/tests/: camera.rs  canvas.rs  cubes.rs  cylinders.rs  groups.rs  intersections.rs  lights.rs  materials.rs  matrices.rs  mod.rs  obj_file.rs  patterns.rs  rays.rs  shapes.rs  smooth_triangles.rs  spheres.rs  transformations.rs  triangles.rs  tuples.rs  world.rs
src/tests/ch1/: mod.rs
src/tests/ch2/: mod.rs
src/tests/ch3/: mod.rs
src/tests/ch4/: mod.rs
src/tests/ch5/: mod.rs
src/tests/ch6/: mod.rs
src/tests/ch7/: mod.rs
src/utils/: image_writer.rs  mod.rs  obj_parser.rs
