[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["klomeli"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
indoc = "1.0"
lazy_static = "1.4.0"
rayon = "1.5"
linked-hash-map = "0.5.4"
log = "0.4.14"
env_logger = "0.9.0"